[package]
name = "comic-rezip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chalk_rs = "1.0.1"
chardet = "0.2.4"
encoding = "0.2.33"
tokio = { version = "1.35.0", features = ["fs", "rt"] }
zip = "0.6.6"
