[package]
name = "comic-rezip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = { version = "0.0.14", features = ["full"] }
chalk_rs = "1.0.1"
chardet = "0.2.4"
dirs-next = "2.0.0"
encoding = "0.2.33"
futures-util = "0.3.29"
image-convert = "0.16.1"
mime_guess = "2.0.4"
tempfile = "3"
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = "0.7.10"
walkdir = "2.4.0"
zip = "0.6.6"
